Added "Remember Me" checkbox for logging in.

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -16,6 +16,10 @@
             <input name="username" placeholder="Username">
             <p>Password:</p>
             <input name="password" placeholder="Password">
+            <div>
+                <label>Remember Me</label>
+                <input type="checkbox" name="remember_me" value="Remember Me">
+            </div>
             <button action="submit">Login</button>
         </form>
     </body>
